# Insignia-Subnet

./: .gitignore  README.md
subnet/: CHANGELOG.md  README.md  program.md  protocol.md  pyproject.toml  requirements.txt
subnet/demo/: dashboard.html  miner.py  models.py  run.py  validator.py
subnet/docs/: EMULATOR_SPEC.md  INCENTIVE_MECHANISM.md  PAIRING_MECHANISM.md  PARAMETER_TUNING_PLAN.md  SUBNET_SPEC.md  TESTNET_DEPLOYMENT.md  researcher.md  sentinel.md  tuner.md
subnet/insignia/: __init__.py  code_submission.py  cross_layer.py  incentive.py  pairing.py  protocol.py  safe_model_loader.py  scoring.py
subnet/monitoring/: docker-compose.yml  prometheus.yml
subnet/neurons/: l1_miner.py  l1_validator.py  l2_miner.py  l2_validator.py  model_validator.py  researcher_miner.py  trader_miner.py  trading_validator.py  validator.py
subnet/reference_configs/: knee_point_V13-R3.json
subnet/scripts/: run_demo.py
subnet/testnet/: __init__.py  config.py  docker-compose.testnet.yml  emulator.py  run_emulator.py  setup_local.sh  subnet_manager.py  wallet_manager.py
subnet/tests/: test_code_submission.py  test_model_routing.py  test_orchestration_updates.py  test_pairing.py  test_safe_model_loader.py  test_simulation_separation.py
subnet/tuning/: __init__.py  attack_detector.py  autoresearch_loop.py  composite_integrity_scorer.py  metrics_exporter.py  optimizer.py  orchestrator.py  parameter_space.py  pc_vh_006_symbol_diversity.py  sentinel_symbol_monitor.py  simulation.py
subnet/viz/: build_input_data.py  build_model_perf.py  build_scoring.py  build_viz.py  (+6 more)
(+24 files in other folders)
